<resources>
    <string name="app_name">QuizApp</string>
    <string name="quizHeader">A quiz on Cricket</string>
    <string name="question1">Question 1: In what year was the first officially recognised Test match played?</string>
    <string name="question1a">1876</string>
    <string name="question1b">1891</string>
    <string name="question1c">1877</string><!-- Right answer -->
    <string name="question1d">1884</string>
    <string name="question2">Question 2: Name the two Sri Lankan Batsman who made the highest test partnership in Test Cricket in 2006</string>
    <string name="question2a">Kumar Sangakkara</string><!-- Right answer -->
    <string name="question2b">Thilan Samaraweera</string>
    <string name="question2c">Marvan Atapattu</string>
    <string name="question2d">Mahela Jayawardene</string><!-- Right answer -->
    <string name="question3">Question 3: Name the players who took over 20 wickets in the 2005 ashes series</string>
    <string name="question3a">Andrew Flintoff</string><!-- Right answer -->
    <string name="question3b">Shane Warne</string><!-- Right answer -->
    <string name="question3c">Simon Jones</string>
    <string name="question3d">Glen McGrath</string>
    <string name="question4">Question 4: Ian Botham scored 149 not out to set up a win against Australia in the 1981 ashes Series. Name the ground where this was scored.</string>
    <string name="question4Answer">Ground</string>
    <string name="question5">Question 5: Sachin Tendulkar is widely regarded as the greatest Batsman of all time. How many test centuries did he score for India?</string>
    <string name="question5a">44</string>
    <string name="question5b">56</string>
    <string name="question5c">51</string><!-- Right answer -->
    <string name="question5d">49</string>
    <string name="question6">Question 6: Name the two all-rounders below who have scored over 8000 runs and taken over 200 wickets</string>
    <string name="question6a">Jacques Kallis</string><!-- Right answer -->
    <string name="question6b">Garfield Sobers</string><!-- Right answer -->
    <string name="question6c">Ian Botham</string>
    <string name="question6d">Kapil Dev</string>
    <string name="question7">Question 7: The home ground of the MCC, the ECB and Middlesex County Cricket Ground, commonly called "The home of cricket" is called:  </string>
    <string name="question7Answer">Ground</string>
    <string name="question8">Question 8: Who is the leading wicket taker in Test Match cricket?</string>
    <string name="question8a">Anil Kumble</string>
    <string name="question8b">Muttiah Muralitharan</string><!-- Right answer -->
    <string name="question8c">Shane Warne</string>
    <string name="question8d">Glen McGrath</string>
    <string name="submitButton">submit</string>
    <string name="resetButton">reset</string>
</resources>
