<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.android.quizapp.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/quizHeader"
            style="@style/titleStyle"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/question1"
            style="@style/questionTextStyle"
            />

        <RadioGroup
            android:id="@+id/question1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="8dp">
            <RadioButton
                android:id="@+id/question1a"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/question1a" />
            <RadioButton
                android:id="@+id/question1b"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/question1b" />
            <RadioButton
                android:id="@+id/question1c"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/question1c" />
            <RadioButton
                android:id="@+id/question1d"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/question1d" />
        </RadioGroup>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/question2"
            style="@style/questionTextStyle" />

        <CheckBox
            android:id="@+id/question2a"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/question2a"/>

        <CheckBox
            android:id="@+id/question2b"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/question2b"/>

        <CheckBox
            android:id="@+id/question2c"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/question2c"/>

        <CheckBox
            android:id="@+id/question2d"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/question2d"
            android:paddingBottom="8dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/question3"
            style="@style/questionTextStyle"/>

        <CheckBox
            android:id="@+id/question3a"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/question3a"/>

        <CheckBox
            android:id="@+id/question3b"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/question3b"/>

        <CheckBox
            android:id="@+id/question3c"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/question3c"/>

        <CheckBox
            android:id="@+id/question3d"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/question3d"
            android:paddingBottom="8dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/question4"
            style="@style/questionTextStyle" />

        <EditText
            android:id="@+id/question4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="@string/question4Answer"
            android:paddingBottom="8dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/question5"
            style="@style/questionTextStyle"/>

        <RadioGroup
            android:id="@+id/question5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="8dp">
            <RadioButton
                android:id="@+id/question5a"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/question5a"/>
            <RadioButton
                android:id="@+id/question5b"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/question5b"/>
            <RadioButton
                android:id="@+id/question5c"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/question5c"/>
            <RadioButton
                android:id="@+id/question5d"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/question5d"/>
        </RadioGroup>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/question6"
            style="@style/questionTextStyle"/>

        <CheckBox
            android:id="@+id/question6a"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/question6a"/>

        <CheckBox
            android:id="@+id/question6b"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/question6b"/>

        <CheckBox
            android:id="@+id/question6c"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/question6c" />

        <CheckBox
            android:id="@+id/question6d"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/question6d"
            android:paddingBottom="8dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/question7"
            style="@style/questionTextStyle"/>

        <EditText
            android:id="@+id/question7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="@string/question7Answer" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/question8"
            style="@style/questionTextStyle"/>

        <RadioGroup
            android:id="@+id/question8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="8dp">
            <RadioButton
                android:id="@+id/question8a"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/question8a"/>
            <RadioButton
                android:id="@+id/question8b"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/question8b"/>
            <RadioButton
                android:id="@+id/question8c"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/question8c"/>
            <RadioButton
                android:id="@+id/question8d"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/question8d"/>
        </RadioGroup>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center_horizontal">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/submitButton"
                android:onClick="submitButton"/>

            <Button
                android:id="@+id/button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/resetButton"
                android:onClick="resetButton"/>

        </LinearLayout>
    </LinearLayout>

</ScrollView>
